--- a/src/components/sections/Projects.module.scss
+++ b/src/components/sections/Projects.module.scss
@@ -21,6 +21,7 @@
   line-height: 64px;
   letter-spacing: -1.12px;
   color: $black;
+  margin-top: 50px;
 
   @include tablet {
     font-size: 40px;
